# pipe-realtime-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile.realtime  README copy.md  README.md
.github/: pull_request_template.md
.github/workflows/: build-and-update-manifest-qa.yaml  build-and-update-manifest.yaml
devops/: compile.sh  run.sh  status.sh
src/: main_realtime.rs
src/app_realtime/: configs.rs  devs_cache.rs  global_vars.rs  http_router.rs  mqtt_task.rs  on_mqtt_message.rs
src/app_realtime/endpoints/: get_devices_last_telemetries.rs  get_devices_last_ts.rs  inspect_dev_notifications.rs
src/app_realtime/notifications/: inspection.rs  mod.rs  notifs_cfg.rs  send_queue.rs  update_queue.rs
src/app_realtime/notifications/dac/: mod.rs  notifs_dac.rs  on_dac_telemetry.rs
src/app_realtime/notifications/dac/dac_l1/: dac_compressor_usage_hours.rs  mod.rs
src/app_realtime/notifications/dut/: mod.rs  notifs_dut.rs  on_dut_telemetry.rs
src/app_realtime/notifications/dut/dut_co2/: dut_co2_acima.rs  dut_co2_acima_diario.rs  mod.rs
src/app_realtime/notifications/dut/dut_t/: dut_t_acima_limite_critico.rs  dut_t_fora_limites_antigo.rs  mod.rs
src/helpers/: envvars_loader.rs  lib_essential_thread.rs  lib_log.rs  lib_pahomqtt.rs  lib_rumqtt.rs  mod.rs  tls_socket_rustls.rs
src/helpers/lib_http/: buffer.rs  protocol.rs  request.rs  response.rs  service.rs  types.rs
src/helpers/telemetry_payloads/: parse_json_props.rs  telemetry_formats.rs
