[package]
name = "reatlime_service"
version = "0.1.0"
authors = ["Diel Energia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "realtime"
path = "./src/main_realtime.rs"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
json5 = "0.4.1"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["rustls-tls", "json"] }
rumqttc = "0.24.0"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
sys-info = "0.9.1"
tokio = { version = "1.42.0", features = ["rt", "net", "fs"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"
